# nano-chan

./: .gitignore  LICENSE  README.md  jetson_setting.md  pyproject.toml
configs/: config.yaml
nano_chan/: __init__.py  __main__.py
nano_chan/libs/kokoro_onnx/: __init__.py
nano_chan/libs/onnx_asr/: loader.py
nano_chan/libs/onnx_asr/models/: gigaam.py  kaldi.py  nemo.py  pyannote.py  silero.py  whisper.py
nano_chan/libs/onnx_asr/preprocessors/: nemo128.onnx  preprocessor.py  resample.onnx  resampler.py
nano_chan/src/: language_processor.py  nano_chan.py  transcriber.py  voice_capture.py  voice_generator.py  voice_player.py
